[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Time.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/player_ui/sun_dial.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/player_ui/sun_dial_notch.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/My_handwritten_font-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Sprites/player_ui/times_one_f.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/player_ui/times_two_f.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/player_ui/play.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/player_ui/pause.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/player_ui/pause_selected.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/player_ui/play_selected.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/player_ui/times_two_f_selected.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/player_ui/times_one_f_selected.png" type="Texture" id=16]
[ext_resource path="res://Scripts/TimeControls.gd" type="Script" id=17]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
outline_size = 2
use_filter = true
font_data = ExtResource( 4 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.25992
margin_bottom = -1.25989
mouse_filter = 2
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 1250.0
margin_bottom = 690.0

[node name="Time" type="Control" parent="MarginContainer/VBoxContainer"]
margin_left = 610.0
margin_right = 610.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sun" type="TextureRect" parent="MarginContainer/VBoxContainer/Time"]
margin_left = -125.0
margin_top = 25.0
margin_right = 125.0
margin_bottom = 275.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 125, 0 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notch" type="TextureRect" parent="MarginContainer/VBoxContainer/Time/Sun"]
margin_right = 250.0
margin_bottom = 250.0
rect_rotation = -0.165836
rect_pivot_offset = Vector2( 125, 125 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="MarginContainer/VBoxContainer/Time"]
wait_time = 0.5
autostart = true

[node name="Day" type="Label" parent="MarginContainer/VBoxContainer/Time"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.0
margin_top = -25.0
margin_right = 35.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 50 )
rect_pivot_offset = Vector2( 25, 25 )
size_flags_horizontal = 8
size_flags_vertical = 8
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Day #1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 1220.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 150 )
custom_styles/panel = SubResource( 2 )

[node name="View" type="Label" parent="MarginContainer/VBoxContainer"]
margin_left = 563.0
margin_top = 158.0
margin_right = 657.0
margin_bottom = 173.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Solar Panels"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeControls" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 524.0
margin_top = 177.0
margin_right = 696.0
margin_bottom = 217.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 17 )

[node name="Play" type="TextureButton" parent="MarginContainer/VBoxContainer/TimeControls" groups=[
"Button",
"TimeControl",
]]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
toggle_mode = true
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 14 )
expand = true

[node name="Pause" type="TextureButton" parent="MarginContainer/VBoxContainer/TimeControls" groups=[
"Button",
"TimeControl",
]]
margin_left = 44.0
margin_right = 84.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
toggle_mode = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 13 )
expand = true

[node name="Forward" type="TextureButton" parent="MarginContainer/VBoxContainer/TimeControls" groups=[
"Button",
"TimeControl",
]]
margin_left = 88.0
margin_right = 128.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 16 )
expand = true

[node name="ForwardTimes2" type="TextureButton" parent="MarginContainer/VBoxContainer/TimeControls" groups=[
"Button",
"TimeControl",
]]
margin_left = 132.0
margin_right = 172.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 15 )
expand = true

[connection signal="timeout" from="MarginContainer/VBoxContainer/Time/Timer" to="MarginContainer/VBoxContainer/Time" method="_on_Timer_timeout"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TimeControls/Play" to="MarginContainer/VBoxContainer/TimeControls" method="_on_Play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TimeControls/Pause" to="MarginContainer/VBoxContainer/TimeControls" method="_on_Pause_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TimeControls/Forward" to="MarginContainer/VBoxContainer/TimeControls" method="_on_Forward_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TimeControls/ForwardTimes2" to="MarginContainer/VBoxContainer/TimeControls" method="_on_ForwardTimes2_pressed"]
